# cpp_chess

./: .gitignore  100_results_r.html  101_results_r.html  102_results_r.html  103_results_r.html  104_results_r.html  CMakeLists.txt  README.md  build.sh  build_and_run.sh  chess.jsx  results.html  results_r.html  run.sh
docs/: OPTIMIZATION_LOG.md  PROFILING.md
scripts/: bench_ga.sh  parse_trace.sh  profile.sh  profile_all.sh  regression_bench.sh  summarize_bench_csv.sh
src/: bench_main.cpp  bench_mate.cpp  board.cpp  board.hpp  ga.cpp  ga.hpp  html_export.cpp  html_export.hpp  local_search.cpp  local_search.hpp  main.cpp  mate.cpp  mate.hpp
